--- a/index.html
+++ b/index.html
@@ -4,23 +4,47 @@
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
 
-  <body>
+  <body class="body">
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <!--
 
-    Hello Camper!
+    <div class="header" >
+      <h1>ANAKIN SKYWALKER</h1>
+    </div>
 
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
 
-    - The freeCodeCamp Team
+    <div class="container" >
+        <div class="row">
+          <div class="col-12 mainBox">
+            <div class="imgboard" >
+              <img class="img" src="https://wallpaperaccess.com/full/1581329.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-6 mainBox ">
+            <h1>asd</h1>
+          </div>
+        </div>
+    </div>
 
-    -->
+ <!--   <div class="mainBox" >
+      <div class="imgHeader" >
+        <img src="https://wallpaperaccess.com/full/1581329.jpg" alt="">
+      </div>-->
+
+    </div>
+
+
+
+
+    
+
+ 
+
     <script  src="js/index.js"></script>
   </body>
 </html>
