updated the write ups

--- a/index.html
+++ b/index.html
@@ -21,15 +21,27 @@
           <div class="col-12 mainBox">
             <div class="imgboard" >
               <img class="img" src="https://wallpaperaccess.com/full/1581329.jpg" alt="">
+              <figcaption>Anakin Skywalker and Darth Vader </figcaption>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-6 mainBox ">
-            <h1>asd</h1>
-          </div>
+
+      <div class="About">
+          <h1>Who is Anakin?</h1>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae atque ipsum earum ea assumenda at temporibus suscipit, asperiores aperiam. Aliquid eius quisquam obcaecati autem nihil ea quos eaque animi eos ipsum repudiandae laudantium praesentium, optio rerum aperiam, sequi iste? Veritatis perferendis, nulla commodi, ratione, vero omnis temporibus nobis fugit placeat laborum voluptas eaque rerum! Assumenda optio modi voluptatibus excepturi quibusdam nisi ducimus tempora obcaecati necessitatibus. Consequuntur laudantium numquam error esse.</p>
+          <h3>Achievements</h3>
+          <ul>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores ipsa recusandae dicta.</li>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, esse!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, repellendus.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, ipsa.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, totam!</li> 
+          </ul>
         </div>
-    </div>
+
+      <footer>
+        <p>Created by Ozcan & Raymond</p>
+      </footer>
 
  <!--   <div class="mainBox" >
       <div class="imgHeader" >
