--- a/index.html
+++ b/index.html
@@ -6,27 +6,28 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
-
-  <body class="body">
+  
+  <body id="main">
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
 
-    <div class="header" >
+    <div id="title" >
       <h1>ANAKIN SKYWALKER</h1>
     </div>
 
 
-    <div class="container" >
+    <div id="img-div" >
         <div class="row">
           <div class="col-12 mainBox">
             <div class="imgboard" >
-              <img class="img" src="https://wallpaperaccess.com/full/1581329.jpg" alt="">
-              <figcaption>Anakin Skywalker and Darth Vader </figcaption>
+              <img class="img" id="image" src="https://wallpaperaccess.com/full/1581329.jpg" alt="">
+              <figcaption id="img-caption">Anakin Skywalker and Darth Vader </figcaption>
+              <a href="#" target="_blank" id="tribute-link">Tribute Link</a>
             </div>
           </div>
         </div>
 
-      <div class="About">
+      <div id="tribute-info">
           <h1>Who is Anakin?</h1>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae atque ipsum earum ea assumenda at temporibus suscipit, asperiores aperiam. Aliquid eius quisquam obcaecati autem nihil ea quos eaque animi eos ipsum repudiandae laudantium praesentium, optio rerum aperiam, sequi iste? Veritatis perferendis, nulla commodi, ratione, vero omnis temporibus nobis fugit placeat laborum voluptas eaque rerum! Assumenda optio modi voluptatibus excepturi quibusdam nisi ducimus tempora obcaecati necessitatibus. Consequuntur laudantium numquam error esse.</p>
           <h3>Achievements</h3>
@@ -49,7 +50,6 @@
       </div>-->
 
     </div>
-
 
 
 
